feat: Create an Engine.cpp file for the message processing function.

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -146,6 +146,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Entry.cpp" />
   </ItemGroup>
   <ItemGroup>
