feat: Create an hlsl file for the vertex shader and pixel shader
- Create hlsl files
- Change hlsl compiler settings for hlsl files
- Add binary code generated by building hlsl code to the project.

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -130,6 +130,19 @@
       <EntryPointSymbol>
       </EntryPointSymbol>
     </Link>
+    <FxCompile>
+      <EnableDebuggingInformation>false</EnableDebuggingInformation>
+    </FxCompile>
+    <FxCompile>
+      <TreatWarningAsError>true</TreatWarningAsError>
+    </FxCompile>
+    <FxCompile>
+      <ObjectFileOutput />
+      <ShaderModel>5.0</ShaderModel>
+      <EntryPointName>Shader::Pixel</EntryPointName>
+      <VariableName>Bytecode</VariableName>
+      <HeaderFileOutput>$(ProjectDir)Shader\Bytecode\Pixel.h</HeaderFileOutput>
+    </FxCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -155,6 +168,29 @@
   <ItemGroup>
     <ClInclude Include="FreeImage.h" />
     <ClInclude Include="Pipeline.h" />
+    <ClInclude Include="Shader\Bytecode\Pixel.h" />
+    <ClInclude Include="Shader\Bytecode\Vertex.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Shader\HLSL\Buffers.hlsli">
+      <FileType>Document</FileType>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Shader\HLSL\Pixel.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Pixel</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Pixel</ShaderType>
+    </FxCompile>
+    <FxCompile Include="Shader\HLSL\Vertex.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
+      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Shader::Vertex</EntryPointName>
+      <HeaderFileOutput Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)Shader\Bytecode\Vertex.h</HeaderFileOutput>
+    </FxCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
