--- a/Engine/Engine.vcxproj.filters
+++ b/Engine/Engine.vcxproj.filters
@@ -21,10 +21,29 @@
     <ClCompile Include="Engine.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Pipeline.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FreeImage.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Pipeline.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Shader\Bytecode\Vertex.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="Shader\Bytecode\Pixel.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="Shader\HLSL\Vertex.hlsl" />
+    <FxCompile Include="Shader\HLSL\Pixel.hlsl" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Shader\HLSL\Buffers.hlsli" />
   </ItemGroup>
 </Project>
