- feat: Add code for InputLayout
- Create Array of Descriptors for two input layouts
- Set it to the input layout of the input assembler step.

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -172,7 +172,7 @@
     <ClInclude Include="Shader\Bytecode\Vertex.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shader\HLSL\Buffers.hlsli">
+    <None Include="Shader\HLSL\Layout.hlsli">
       <FileType>Document</FileType>
     </None>
   </ItemGroup>
